--- a/index.html
+++ b/index.html
@@ -193,6 +193,6 @@
 
 
 </body>
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="./jquery.min.js"></script>
 <script type="text/javascript" src="./script.js"></script>
 </html>
