Update self intro

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 			<h3>关于我</h3>
 			<h1>Archibald Lu</h1><br />
 			<p>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;我是Archibald Lu。目前在魔都 。ACG大爱，体育苦手，略懂设计，擅长网页编程。喜爱发现新的事物，找到新的乐趣。<br>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;年龄不大，但有多年的网页编程经验，参加过一些比赛，得到过一些名次。目前正在潜心研究PHP&Javascript的前后端编程技术。虽然未来的发展方向还不明确，但是希望能从事类似的工作，当然我也会继续在这个领域继续自己的技术能能力，发展特长。<br>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;我是Archibald Lu。目前在魔都，就读于<a href="http://www.tongji.edu.cn">同济大学</a>， 计算机专业本科生。ACG大爱，体育苦手，略懂设计，擅长Web开发。喜爱发现新的事物，找到新的乐趣。<br>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;年龄不大，但有多年的Web开发经验，参加过一些比赛，得到过一些名次。目前正在潜心研究PHP&Javascript的前后端编程技术。虽然未来的发展方向还不明确，但是希望能从事类似的工作，当然我也会继续在这个领域继续自己的技术能能力，发展特长。<br>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;犹爱新技术的学习应用与实践，所以正在精进自己的基础能力，争取早日走到技术发展的大部队前方。<br>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;如果寻求和我更深一步探讨，欢迎联系我。
 			</p>
@@ -61,15 +61,15 @@
 			<h1>能力量表</h1>
 			<div class="ab_box">
 				<div class="ab_bar_ctn">
-					<div class="ab_bar"><span>60</span>%</div>
+					<div class="ab_bar"><span>50</span>%</div>
 				</div>
-				<h2>Adobe Photoshop</h2>
+				<h2>C/C++</h2>
 			</div>
 			<div class="ab_box">
 				<div class="ab_bar_ctn">
-					<div class="ab_bar"><span>70</span>%</div>
+					<div class="ab_bar"><span>50</span>%</div>
 				</div>
-				<h2>Linux (Arch)</h2>
+				<h2>SQL</h2>
 			</div>
 			<div class="ab_box">
 				<div class="ab_bar_ctn">
@@ -79,7 +79,7 @@
 			</div>
 			<div class="ab_box">
 				<div class="ab_bar_ctn">
-					<div class="ab_bar"><span>60</span>%</div>
+					<div class="ab_bar"><span>70</span>%</div>
 				</div>
 				<h2>Javascript</h2>
 			</div>
