Add work: kyuyu; Change hero bg.

--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@
 						<h3>看作业就要干干净净</h3>
 						<img src="./plhw.png"/>
 					</div>
+					<div class="item" data-workid="3"> 
+						<div class="overlay"></div>
+						<a href="javascript:void()"><h1>Kyuyu Project</h1></a>
+						<h3>级友，旧友。</h3>
+						<img src="./kyuyu.png"/>
+					</div>
 				</div>
 				<div class="next_btn"></div>
 			</div>
@@ -150,6 +156,20 @@
 				<ul>
 					<li>网站  <a href="http://homework.chienius.com" target="_blank">http://homework.chienius.com/</a></li>
 					<li>源码  <a href="http://iolite.chienius.com/#/works" target="_blank">http://iolite.chienius.com/</a> </li>
+				</ul>
+			</dd>
+			<div class="back_btn"><a href="javascript:void()" onclick="$(this).parents('.page').fadeOut(function(){$(this).find('h1, h3, dd, img').attr('style', '')})">back</a></div>
+		</div>
+	</div>
+	<div class="page" data-workid="3">
+		<div class="bg"></div>
+		<div class="page_wrapper">
+			<img src="./kyuyu.png" />
+			<h1>Kyuyu Project</h1>
+			<h3>级友，旧友。</h3>
+			<dd>社交聚合平台，项目筹备中。
+				<ul>
+					<li>网站  <a href="http://kyuyu.sinaapp.com" target="_blank">http://kyuyu.sinaapp.com/</a></li>
 				</ul>
 			</dd>
 			<div class="back_btn"><a href="javascript:void()" onclick="$(this).parents('.page').fadeOut(function(){$(this).find('h1, h3, dd, img').attr('style', '')})">back</a></div>
